...

    <android.support.constraint.ConstraintLayout
        android:id="@+id/reverse_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

        <TextView
            android:id="@+id/reverse_message_value"
            android:layout_width="160dp"
            android:layout_height="match_parent"
...
            app:layout_constraintStart_toEndOf="@+id/reverse_message_value"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recipient_values"/>

        <TextView
...
        android:src="@drawable/color_palette"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reverse_message_validate"
        android:visibility="invisible"/>

...
        android:src="@drawable/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reverse_save"
        android:visibility="invisible"/>

    <ImageButton
        android:id="@+id/reverse_recipient_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <android.support.constraint.ConstraintLayout
        android:id="@+id/reverse_recipient_all"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

        <EditText
            android:id="@+id/reverse_recipient_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/reverse_recipient_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/reverse_recipient_postcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/reverse_recipient_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/reverse_recipient_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

    <android.support.constraint.ConstraintLayout
        android:id="@+id/reverse_message_all"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

        <EditText
            android:id="@+id/reverse_message_input"
            android:layout_width="0dp"
            android:layout_height="130dp"
...
            android:inputType="textMultiLine|textCapSentences"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/reverse_fontListSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
...
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_layout"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/reverse_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="20dp">
...

                <ImageButton
                    android:id="@+id/reverse_align_to_center_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:src="@drawable/align_bottom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/reverse_align_to_center_h" />

            </LinearLayout>
...
