<resources>
    <string name="app_name">CardMaker</string>


    <string name="bottom_menu_template">Templates</string>
    <string name="bottom_menu_reverse">Reverses</string>
    <string name="bottom_menu_history">Postcards</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="template_button_size_text">A6</string>
    <string name="empty_list_text">List is empty</string>
    <string name="exit_from_templates">Are you sure to exit?</string>
    <string name="border_setting_button_text">Change color</string>
    <string name="delete_item_communicate">Are you sure?</string>
</resources>
